--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@casar/ui-kit": "^3.8.0",
     "@hookform/resolvers": "^3.5.0",
+    "hbs": "^4.2.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
@@ -18,6 +19,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/hbs": "^4.0.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
