--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@casar/ui-kit": "^3.8.0",
+    "@casar/ui-kit": "file:../../ui-kit",
     "@hookform/resolvers": "^3.5.0",
     "hbs": "^4.2.0",
+    "jsdom": "^24.1.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@types/hbs": "^4.0.4",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
